// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <div
    class="container-fluid col-8 bg-white rounded"
  >
    <a
      class="link"
      href="/companies/rithm"
    >
      <div
        class="CompanyCard mb-4"
      >
        <h5>
          <u>
            Rithm School
          </u>
        </h5>
        <p>
          Become an exceptional developer in 16 weeks.
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <div
    class="container-fluid col-8 bg-white rounded"
  >
    <a
      class="link"
      href="/companies/algo"
    >
      <div
        class="CompanyCard mb-4"
      >
        <h5>
          <u>
            Algo School
          </u>
        </h5>
        <p>
          Become a mediocre developer in 160 weeks.
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
